--- a/source/nepton.css
+++ b/source/nepton.css
@@ -25,7 +25,7 @@ body {
 /* ------------------------------------- 
 		ELEMENTS 
 ------------------------------------- */
-a { color: #2BA6CB;}
+a { color: #000000;}
 
 .btn {
 	text-decoration:none;
