--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   padding: 30px 20px;
   background: #fff;
   border: 1px solid #f1f1f1;
-  box-shadow: 0px 6px #c0392b;
+  box-shadow: 0px 6px #0069AA;
   border-radius: 0px 0px 4px 4px;
 }
 
