--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 
 /* CAD Viewer */
 .cad{
+  text-align: center;
   max-width: 50%;
 }
 
