--- a/css/main.css
+++ b/css/main.css
@@ -186,9 +186,20 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 
 /* CAD Viewer */
-.cad{
-  text-align: center;
-  max-width: 50%;
+.cad {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.cad iframe, .cad object, .cad embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
 }
 
 /* Tabs */
