--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,22 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 	height:100%;
 }
 
+/* Report */
+.report {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+.report iframe, .cad object, .cad embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
 /* Tabs */
 .etabs{
   margin: 0;
