--- a/css/main.css
+++ b/css/main.css
@@ -210,13 +210,13 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 	height:0;
 	overflow:hidden;
 }
-.report iframe, .cad object, .cad embed {
+/* .report iframe, .cad object, .cad embed {
 	position:absolute;
 	top:0;
 	left:0;
 	width:100%;
 	height:100%;
-}
+} */
 
 /* Tabs */
 .etabs{
