--- a/css/main.css
+++ b/css/main.css
@@ -293,10 +293,16 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   overflow: hidden;
 }
 .photo img{
- -webkit-border-radius: 4px;
+/*  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
- width: 50%;
+ width: 50%; */
+ 
+ 	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
 }
 .info{
 
