--- a/css/main.css
+++ b/css/main.css
@@ -287,22 +287,16 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* Photo */
 .photo{
   float: left;
-/*   height: 300px;
-  width: 450px; */
+  height: 240px;
+  width: 360px;
   margin-right: 20px;
   overflow: hidden;
 }
 .photo img{
-/*  -webkit-border-radius: 4px;
+ -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
- width: 50%; */
- 
- 	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+ width: 100%;
 }
 .info{
 
