--- a/css/main.css
+++ b/css/main.css
@@ -747,6 +747,8 @@ Change widths as necessary
  .g1 {width:48.0%}
  .g2 {width:48.0%}
  .g3 {width:98.0%}
+ .g4 {width:48.0%}
+ .g5 {width:48.0%}
 }
 
 /* LANDSCAPE TABLET/NETBOOK/LAPTOP */
@@ -772,6 +774,7 @@ Change widths as necessary
   .g2 {width:64.667%;}
   .g3 {width:98.0%}
   .g4 {width:50.0%}
+  .g5 {width:50.0%}
 }
 
 @media only screen and (min-width: 1280px) { 
